--- a/criticus/templates/plain_text_to_json.html
+++ b/criticus/templates/plain_text_to_json.html
@@ -2,7 +2,7 @@
 {%block content %}
 <div class="container-fluid">
     <h1 class="text-center">Plain Text to JSON</h1>
-    <form hx-post="{% url 't2j' %}"
+    <form hx-post="{% url 'txt2json' %}"
         hx-target="#modals"
         hx-swap="innerHTML">
         <fieldset class="border border-primary p-2">
