--- a/criticus/templates/_modal.html
+++ b/criticus/templates/_modal.html
@@ -20,7 +20,7 @@
                 <button type="button" class="btn-close" aria-label="Close" onclick="closeModal()"></button></button>
             </div>
             <div class="modal-body">
-                <p>{{ modal_text }}</p>
+                <p class="text-break">{{ modal_text }}</p>
                 <pre>{{ error_text }}</pre>
             </div>
             <div class="modal-footer">
