implement combine_collations

--- a/criticus/templates/base.html
+++ b/criticus/templates/base.html
@@ -48,19 +48,16 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">About</a>
+                        <a href="{% url 'combine-collations' %}" class="nav-link{% if page == 'combine-collations' %} active{% endif %}">
+                            {% if page == 'combine-collations' %}<span class="visually-hidden">(current)</span>{% endif %}
+                            Combine Collations
+                        </a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
-                            aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                        <div class="dropdown-menu">
-                            <button class="dropdown-item" id="action-button" type="button"
-                                onclick="addTask('hello from criticus!')">Action</button>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Separated link</a>
-                        </div>
+                    <li class="nav-item">
+                        <a href="{% url 'reformat-collation' %}" class="nav-link{% if page == 'reformat-collation' %} active{% endif %}">
+                            {% if page == 'reformat-collation' %}<span class="visually-hidden">(current)</span>{% endif %}
+                            Combine Collations
+                        </a>
                     </li>
                 </ul>
             </div>
