--- a/criticus/templates/_input_floating.html
+++ b/criticus/templates/_input_floating.html
@@ -1,6 +1,7 @@
 {% comment  %}
     name: str
     label: str
+    value?: str
     id?: str
     type?: "text" | "email" | "password" | "number" | "range" | "search" | "tel" | "url"
     classes?: str
@@ -19,6 +20,7 @@
         autocomplete="{{ autocomplete|default:'on' }}"
         name="{{ name }}"
         placeholder="{{ label }}"
+        value="{{ value|default:'' }}"
         {% if disabled %}
             disabled
         {% endif %}
