implement reformat collation

--- a/criticus/templates/base.html
+++ b/criticus/templates/base.html
@@ -56,7 +56,7 @@
                     <li class="nav-item">
                         <a href="{% url 'reformat-collation' %}" class="nav-link{% if page == 'reformat-collation' %} active{% endif %}">
                             {% if page == 'reformat-collation' %}<span class="visually-hidden">(current)</span>{% endif %}
-                            Combine Collations
+                            Reformat Collation
                         </a>
                     </li>
                 </ul>
