implement collation to docx

--- a/criticus/templates/_input_floating.html
+++ b/criticus/templates/_input_floating.html
@@ -5,6 +5,7 @@
     id?: str
     type?: "text" | "email" | "password" | "number" | "range" | "search" | "tel" | "url"
     classes?: str
+    wrapper_classes?: str
     autocomplete?: "on" | "off"
     disabled?: True | False
     style?: str
@@ -13,7 +14,7 @@
 {% endcomment %}
 
 
-<div class="form-floating">
+<div class="form-floating {{ wrapper_classes|default:'' }}">
     <input 
         id="{% if id %}{{ id }}{% else %}{{ name }}-input-id{% endif %}"
         type="{{ type|default:'text' }}"
