--- a/criticus/templates/_checkbox.html
+++ b/criticus/templates/_checkbox.html
@@ -5,10 +5,17 @@
     type = "checkbox": "checkbox" | "radio"
     checked = True: True | False
     hyperscript = False: False | str
+    disabled?: True | False
+    id?: str
 {% endcomment %}
 
 <div class="form-check my-2">
-    <input id="{{ value }}-input"
+    <input
+        {% if id %}
+            id="{{ id }}"
+        {% else %}
+            id="{{ name }}-{{ value }}-input"
+        {% endif %}
         class="form-check-input"
         type="{{ type|default:'checkbox' }}"
         name="{{ name }}"
@@ -17,8 +24,17 @@
         {% if hyperscript %}
             _="{{ hyperscript }}"
         {% endif %}
+        {% if disabled %}
+            disabled
+        {% endif %}
     />
-    <label class="form-check-label" for="{{ value }}-input">
+    <label class="form-check-label" 
+        {% if id %}
+            for="{{ id }}"
+        {% else %}    
+            for="{{ name }}-{{ value }}-input"
+        {% endif %}
+    >
         {{ label }}
     </label>
 </div>
