--- a/criticus/templates/combine_collations.html
+++ b/criticus/templates/combine_collations.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% block title %}Combine Collations{% endblock %}
+{% extends 'base.html' %}
+{% block title %}Combine Collations{% endblock %}
 {% block content %}
 <div class="container-fluid">
     <h1 class="text-center">Combine XML Collations</h1>
@@ -15,7 +16,7 @@
                     {% include '_input_floating.html' with id="publicationStatement" name="publication-statement" label="Publication Statement" value=settings.combine_collations_publication_stmt classes="tei-statements" disabled=True only %}
                 </div>
             </div>
-            {% include '_input_floating.html' with id="startswithInput" name="startswith" label="Combine all files that start with:" value=settings.combine_collations_startswith only %}
+            {% include '_input_floating.html' with id="startswithInput" name="startswith" label="Combine all files that start with:" value=settings.combine_collations_startswith required=True only %}
             
         </fieldset>
 
