--- a/criticus/templates/markdown_to_tei.html
+++ b/criticus/templates/markdown_to_tei.html
@@ -17,16 +17,14 @@
 
         <!-- Conversion Scope -->
 
-        <div class="input-group scopes mt-2" id="input-file">
-            {% include '_input_floating.html' with id="inputFile" name="input_file" label="Input Markdown" classes="scope-input" required=True style="direction: rtl; text-align: right;" only %}
+        <div class="input-group scopes my-1" id="input-file">
+            {% include '_input_floating.html' with id="inputFile" name="input_file" label="Input Markdown" value=settings.md2tei_input_file classes="scope-input" required=True style="direction: rtl; text-align: right;" only %}
             <button type="button" class="btn btn-info text-nowrap" id="dirPicker" onclick="addTask('pick_file', 'inputFile', null, 'md')">Browse</button>
         </div>
 
-        <div class="form-group d-flex flex-row gap-4 align-items-center my-2">
-            <div class="input-group">
-                {% include '_input_floating.html' with id="outputFile" name="output_file" label="Output TEI" style="direction: rtl; text-align: right;" required=True only %}
-                <button type="button" class="btn btn-info text-nowrap" id="newFilePicker" onclick="addTask('new_file', 'outputFile', null, 'xml')">Browse</button>
-            </div>
+        <div class="input-group my-1">
+            {% include '_input_floating.html' with id="outputFile" name="output_file" label="Output TEI" value=settings.md2tei_output_file style="direction: rtl; text-align: right;" required=True only %}
+            <button type="button" class="btn btn-info text-nowrap" id="newFilePicker" onclick="addTask('new_file', 'outputFile', null, 'xml')">Browse</button>
         </div>
         <button type="submit" class="btn btn-primary w-100">
             <span id="convert-btn-txt">Convert</span>
